ag-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ag
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    # appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  rules:
    # - host: bla
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodeapp
              port:
                number: 80

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nodeapp-ag
#   annotations:
#     kubernetes.io/ingress.class: azure/application-gateway
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: nodeapp
#             port:
#               number: 80
